# quickjs-rs

./: .gitignore  .gitmodules  Cargo.toml
examples/: eval.rs  promise_rejection_track.rs  resource.rs
libquickjs-sys/: Cargo.toml  build.rs  gen-bindings.bat  wrapper.h
libquickjs-sys/embed/: bindings.rs
libquickjs-sys/embed/patches/: js-tobigint64-overflow.patch
libquickjs-sys/src/: lib.rs
src/: exception.rs  lib.rs  loader.rs
src/bindings/: convert.rs  mod.rs  value.rs
src/value/: mod.rs
